tests/baselines/reference/jsFileCompilationSyntaxError.errors.txt
error TS5054: Could not write file 'tests/cases/compiler/a.js' which is one of the input files.
tests/cases/compiler/a.js(3,6): error TS1223: 'type' tag already specified.


!!! error TS5054: Could not write file 'tests/cases/compiler/a.js' which is one of the input files.
==== tests/cases/compiler/a.js (1 errors) ====
    /**
      * @type {number}
      * @type {string}
         ~~~~
!!! error TS1223: 'type' tag already specified.
      */
    var v;
    